{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 40,
  "lineage": "122546c5-0137-c1a3-298b-ec38a53594b6",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "coderco_lb_module",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/frontendIPConfigurations/coderco-lb-fe",
                "name": "coderco-lb-fe",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/publicIPAddresses/coderco-public-ip"
              }
            ],
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb",
            "location": "canadacentral",
            "name": "coderco-lb",
            "resource_group_name": "coderco-tech-test",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.lb.azurerm_public_ip.coderco_lb_module_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "coderco_backend_pool",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/backendAddressPools/coderco-backend-pool",
            "loadbalancer_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb",
            "name": "coderco-backend-pool"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.lb.azurerm_lb.coderco_lb_module",
            "module.lb.azurerm_public_ip.coderco_lb_module_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "coderco_lb_probe",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/probes/http-probe",
            "interval_in_seconds": 15,
            "loadbalancer_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb",
            "name": "http-probe",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Http",
            "request_path": "/"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.lb.azurerm_lb.coderco_lb_module",
            "module.lb.azurerm_public_ip.coderco_lb_module_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "coderco_lb_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/backendAddressPools/coderco-backend-pool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "enable_floating_ip": false,
            "enable_tcp_reset": false,
            "frontend_ip_configuration_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/frontendIPConfigurations/coderco-lb-fe",
            "frontend_ip_configuration_name": "coderco-lb-fe",
            "frontend_port": 80,
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/loadBalancingRules/http-rule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb",
            "name": "http-rule",
            "probe_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/loadBalancers/coderco-lb/probes/http-probe",
            "protocol": "Tcp"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.lb.azurerm_lb.coderco_lb_module",
            "module.lb.azurerm_lb_backend_address_pool.coderco_backend_pool",
            "module.lb.azurerm_lb_probe.coderco_lb_probe",
            "module.lb.azurerm_public_ip.coderco_lb_module_pip"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "coderco_lb_module_pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/publicIPAddresses/coderco-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "130.107.36.43",
            "ip_version": "IPv4",
            "location": "canadacentral",
            "name": "coderco-public-ip",
            "resource_group_name": "coderco-tech-test",
            "sku": "Standard",
            "sku_tier": "Regional",
            "zones": [
              "1",
              "2"
            ]
          },
          "dependencies": [
            "azurerm_resource_group.coderco"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "coderco-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/networkSecurityGroups/coderco-nsg",
            "location": "canadacentral",
            "name": "coderco-nsg",
            "resource_group_name": "coderco-tech-test",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.coderco"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "coderco_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80-443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/networkSecurityGroups/coderco-nsg/securityRules/allow-http",
            "name": "allow-http",
            "network_security_group_name": "coderco-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "coderco-tech-test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.network.azurerm_network_security_group.coderco-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "coderco_nsg_deny_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Deny",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/networkSecurityGroups/coderco-nsg/securityRules/deny-all",
            "name": "deny-all",
            "network_security_group_name": "coderco-nsg",
            "priority": 300,
            "protocol": "*",
            "resource_group_name": "coderco-tech-test",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.network.azurerm_network_security_group.coderco-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "coderco-subnet-module",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/virtualNetworks/coderco-vnet/subnets/coderco-subnet",
            "name": "coderco-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "coderco-tech-test",
            "virtual_network_name": "coderco-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.network.azurerm_virtual_network.coderco-vnet-module"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "coderco_nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/virtualNetworks/coderco-vnet/subnets/coderco-subnet",
            "network_security_group_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/networkSecurityGroups/coderco-nsg",
            "subnet_id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/virtualNetworks/coderco-vnet/subnets/coderco-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.coderco",
            "module.network.azurerm_network_security_group.coderco-nsg",
            "module.network.azurerm_subnet.coderco-subnet-module",
            "module.network.azurerm_virtual_network.coderco-vnet-module"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "coderco-vnet-module",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4cc8fecd-3c95-4f67-988e-e6de4fa27a3e",
            "id": "/subscriptions/024e0be0-f00f-4015-b564-f09971c20c56/resourceGroups/coderco-tech-test/providers/Microsoft.Network/virtualNetworks/coderco-vnet",
            "location": "canadacentral",
            "name": "coderco-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "coderco-tech-test"
          },
          "dependencies": [
            "azurerm_resource_group.coderco"
          ]
        }
      ]
    }
  ]
}